Updates the ipython notebook on Chromosome.py. Preliminary refactoring on getParentAtLocations.

--- a/Chromosomes.py.ipynb
+++ b/Chromosomes.py.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6345126253d2aa96c4a491bea3448a4deabe617c7285bb0a55defc8191267d9e"
+  "signature": "sha256:d0bbae670347c6764bef924be91725d1db6218ba0f00bc0d9f42d9e77af3cf3d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -105,6 +105,125 @@
      "collapsed": false,
      "input": [
       "def getPhysDistanceFromLoc (loc, number):"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Gets the allele at the specified location [0,1]"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def getParentAtLocation(self, loc):"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Gets the alleles at the specified locations [0,1]"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def getParentAtLocations(self, locs):"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Gets the allele at the specified genetic location."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def getParentAtMapLoc(self, mapLoc):"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Gets the alleles at the specified genetic locations."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def getParentAtMapLocs(self, mapLocs):"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Takes the chromosome and simulates a recombination with a second chromosome."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def recombine(self, mate, interference = None):"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Gets the percentage of the chromosome that is a specific allele (parentName)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def getPercentageOfParent(self, parentName):"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Returns the left and right bounds of the allele at the selected genetic location."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def physicalLocsOfInterval(self, genLoc, chromNumber):"
      ],
      "language": "python",
      "metadata": {},
